--- a/gtagsjs.cabal
+++ b/gtagsjs.cabal
@@ -3,17 +3,18 @@ version: 0.1
 build-type: Simple
 cabal-version: >= 1.2
 library
-  exposed-modules: Gtagsjs
-                   Gtags
+  exposed-modules: Gtags
                    Gtags.Class
                    Gtags.Instances
-                   Gtags.Internal
                    Gtags.JavaScript
                    Gtags.ParserParam
+  other-modules: Gtagsjs
+                 Gtags.Internal
   c-sources: gtagsjs.c
-  build-depends: base == 4.*, array, mtl, parsec, syb, WebBits
+  build-depends: base == 4.*, array, containers, mtl, parsec, syb, WebBits
   extra-libraries: m rt dl ffi HSrts
   include-dirs: .
+  build-tools: hsc2hs
   ghc-options: -Wall
   cc-options: -Wall
   ld-options: -Wall
