more streamlined building

--- a/gtags.conf
+++ b/gtags.conf
@@ -1,5 +1,12 @@
+default:\
+	:tc=gtags:tc=js:
+
 js:\
-	:tc=gtagsjs:tc=htags:
+	:tc=gtagsjs:
+
+gtags:\
+	:tc=common:\
+	:langmap=c\:.c.h,yacc\:.y,asm\:.s.S,java\:.java,cpp\:.c++.cc.hh.cpp.cxx.hxx.hpp.C.H,php\:.php.php3.phtml:
 
 common:\
 	:skip=HTML/,HTML.pub/,tags,TAGS,ID,y.tab.c,y.tab.h,cscope.out,cscope.po.out,cscope.in.out,SCCS/,RCS/,CVS/,CVSROOT/,{arch}/,autom4te.cache/:
