--- a/gtags.conf
+++ b/gtags.conf
@@ -1,12 +1,12 @@
 default:\
 	:tc=gtags:tc=js:
 
-js:\
-	:tc=gtagsjs:
-
 gtags:\
 	:tc=common:\
 	:langmap=c\:.c.h,yacc\:.y,asm\:.s.S,java\:.java,cpp\:.c++.cc.hh.cpp.cxx.hxx.hpp.C.H,php\:.php.php3.phtml:
+
+js:\
+	:tc=gtagsjs:
 
 common:\
 	:skip=HTML/,HTML.pub/,tags,TAGS,ID,y.tab.c,y.tab.h,cscope.out,cscope.po.out,cscope.in.out,SCCS/,RCS/,CVS/,CVSROOT/,{arch}/,autom4te.cache/:
@@ -14,4 +14,4 @@ common:\
 gtagsjs|JavaScript plugin parser:\
 	:tc=common:\
 	:langmap=JavaScript\:.js:\
-	:gtags_parser=JavaScript\:./dist/build/libHSgtagsjs-0.1-ghc7.0.4.so:
+	:gtags_parser=JavaScript\:dist/build/libHSgtagsjs-0.1-ghc7.0.4.so:
