support for older version of GNU Global

--- a/gtags.conf
+++ b/gtags.conf
@@ -14,4 +14,7 @@ common:\
 gtagsjs|JavaScript plugin parser:\
 	:tc=common:\
 	:langmap=JavaScript\:.js:\
-	:gtags_parser=JavaScript\:dist/build/libHSgtagsjs-0.1-ghc7.0.4.so:
+	:GTAGS=./dist/build/gtagsjs/gtagsjs -d %s:\
+	:GRTAGS=./dist/build/gtagsjs/gtagsjs -r %s:\
+	:GSYMS=./dist/build/gtagsjs/gtagsjs -r %s:
+#	:gtags_parser=JavaScript\:dist/build/libHSgtagsjs-0.1-ghc7.0.4.so:
