directory moves and splitting into subprojects

--- a/gtags.conf
+++ b/gtags.conf
@@ -14,7 +14,7 @@ common:\
 gtagsjs|JavaScript plugin parser:\
 	:tc=common:\
 	:langmap=JavaScript\:.js:\
-	:GTAGS=./dist/build/gtagsjs/gtagsjs -d %s:\
-	:GRTAGS=./dist/build/gtagsjs/gtagsjs -r %s:\
-	:GSYMS=./dist/build/gtagsjs/gtagsjs -r %s:
-#	:gtags_parser=JavaScript\:dist/build/libHSgtagsjs-0.1-ghc7.0.4.so:
+	:GTAGS=./gtagsjs-command/dist/build/gtagsjs/gtagsjs -d %s:\
+	:GRTAGS=./gtagsjs-command/dist/build/gtagsjs/gtagsjs -r %s:\
+	:GSYMS=./gtagsjs-command/dist/build/gtagsjs/gtagsjs -r %s:\
+	:gtags_parser=JavaScript\:./gtagsjs-function/dist/build/libHSgtagsjs-function-0.1-ghc7.0.2.so:
